redo of content widget.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        BODY {
+            font-family: Arial;
+            font-size: 10px;
+        }
+    </style>
 </head>
 <body>
-<div class="tracardi-uix-consent" data-type="error" data-message="text" data-horizontal="right"
+TEst
+<div class="tracardi-uix-consent"
+     data-type="error"
+     data-message="text"
+     data-horizontal="right"
+     data-endpoint="http://localhost:8686"
 data-auto-hide="50000"
 ></div>
 <script src="widget/index.js"></script>
